# PhaseCompiler

./: .gitignore  CLAUDE.md  README.md  SKILL.md  main.py  modal_app.py  pyproject.toml  schema.py
.github/workflows/: autoeval.yml
autoeval/: brief.md  brief_cli.md  brief_saas.md  champion_prompt.md  eval_suite.md  prompt.md  results.tsv  run.py  score_baseline.py  view_results.py
autoeval/plans/: baseline.json  iter0002_plan1_score3962.json  iter0002_plan1_score3974.json  iter0002_plan2_score3962.json  iter0002_plan2_score3974.json  iter0002_plan3_score3962.json  iter0002_plan3_score3974.json  iter0002_plan4_score3962.json  iter0002_plan4_score3974.json  iter0002_plan5_score3962.json  iter0002_plan5_score3974.json  iter0002_plan6_score3962.json  iter0002_plan6_score3974.json  iter0002_plan7_score3962.json  iter0002_plan7_score3974.json  iter0002_plan8_score3962.json  iter0002_plan8_score3974.json  iter0002_plan9_score3962.json  iter0002_plan9_score3974.json  iter0003_plan1_score3842.json  iter0003_plan2_score3842.json  iter0003_plan3_score3842.json  iter0003_plan4_score3842.json  iter0003_plan5_score3842.json  iter0003_plan6_score3842.json  iter0003_plan7_score3842.json  iter0003_plan8_score3842.json  iter0003_plan9_score3842.json  iter0004_plan1_score3931.json  (+224 more)
phase-compiler/: SKILL.md  generate-plan.py  schema.py
phasecompiler/: __init__.py  ai_filler.py  ai_filler_claude.py  ai_filler_openai.py  cli.py  plan.json  schema.py  spec.json
tests/: test_ai_filler.py  test_cli.py  test_compile.py  test_init.py  test_phase_1.py  test_schema.py
(+28 files in other folders)
